--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						Pablo
+						<a href="siquelop.github.io" class="logo">
+							Pablo
+						</a>
 					</header>
 
 				<!-- Nav -->
