--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active">This is Me</li>
+							<li class="active"><a href="">This is Me</a></li>
 							<!-- <li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
@@ -58,8 +58,8 @@
 									<span class="date">2024</span>
 									<h2>The<br />
 									Inventor</h2>
-									<p>Game created for geek contest. The Inventor tells interesting tale of Jan Szczepanik,<br />
-									polish creator and inventor who was ahead of his times.</p>
+									<p>A game created for a geek contest. The Inventor tells the interesting story of Jan Szczepanik,<br />
+									a Polish creator and inventor who was ahead of his time.</p>
 								</header>
 								<a href="" class="image main"><img src="images/TheInventor.png" alt="" /></a>
 								<!-- <ul class="actions special">
@@ -75,7 +75,7 @@
 										<h2>Admin Panel</h2>
 									</header>
 									<a href="" class="image fit"><img src="images/AdminPanel.png" alt="" /></a>
-									<p>Project of administrator panel in online shopp.</p>
+									<p>Design of an administration panel for an online store.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
@@ -86,7 +86,7 @@
 										<h2>Atari Breakout</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/AtariBreakout.png" alt="" /></a>
-									<p>Simple js canvas game made as school project.</p>
+									<p>A simple js game created as a school project.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
