--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="siquelop.github.io" class="logo">
+						<a href="https://siquelop.github.io" class="logo">
 							Pablo
 						</a>
 					</header>
