--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://siquelop.github.io" class="logo">
+						<a href="https://github.com/SiquelOP" class="logo">
 							Pablo
 						</a>
 					</header>
@@ -37,7 +37,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="">This is Me</a></li>
+							<li class="active"><a href="https://github.com/SiquelOP">This is Me</a></li>
 							<!-- <li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
