--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<p>A game created for a geek contest. The Inventor tells the interesting story of Jan Szczepanik,<br />
 									a Polish creator and inventor who was ahead of his time.</p>
 								</header>
-								<a href="" class="image main"><img src="images/TheInventor.png" alt="" /></a>
+								<a href="https://theinventor2024.github.io/" class="image main"><img src="images/TheInventor.png" alt="The Inventor" /></a>
 								<!-- <ul class="actions special">
 									<li><a href="" class="button large">Full Story</a></li>
 								</ul> -->
@@ -74,7 +74,7 @@
 										<span class="date">23.05.2024</span>
 										<h2>Admin Panel</h2>
 									</header>
-									<a href="" class="image fit"><img src="images/AdminPanel.png" alt="" /></a>
+									<a href="https://github.com/SiquelOP/AdminPanel" class="image fit"><img src="images/AdminPanel.png" alt=" Admin Panel" /></a>
 									<p>Design of an administration panel for an online store.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
@@ -85,7 +85,7 @@
 										<span class="date">14.12.2023</span>
 										<h2>Atari Breakout</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/AtariBreakout.png" alt="" /></a>
+									<a href="https://siquelop.github.io/AtariBreakout/" class="image fit"><img src="images/AtariBreakout.png" alt="Atari Breakout" /></a>
 									<p>A simple js game created as a school project.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
